<resources>
    <string name="app_name">Brew Tutor</string>

    <string name="title_section_brew">Brew</string>
    <string name="title_section_learn">Learn</string>
    <string name="title_section_log">Log</string>
    <string name="title_section_settings">Settings</string>
    <string name="title_section_help">Help</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_brew">Brew</string>


    <string name="title_style_lagers">Lagers</string>
    <string name="title_style_ales">Ales</string>
    <string name="title_style_wheat">Wheat beers</string>
    <string name="title_style_mixed">Mixed styles</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brew_button_text">Brew this</string>
    <string name="beer_name">Beer name</string>
    <string name="beer_time">Time</string>
    <string name="beer_abv">ABV</string>
    <string name="beer_ibu">IBU</string>
    <string name="beer_ebc">EBC</string>
    <string name="time_units">" weeks"</string>
    <string name="abv_units">" %"</string>
    <string name="ibu_units">" IBU"</string>
    <string name="ebc_units">" EBC"</string>
    <string name="title_activity_mashing">MashingActivity</string>
    <string name="step1">Step 1: Mashing</string>
    <string name="start_mashing">Start!</string>
    <string name="mashing_temp">0°C</string>
    <string name="mashing_before">Before you start:</string>
    <string name="before_mashing_1">1. Heat the water to 77ºC</string>
    <string name="before_mashing_2">2. Prepare the ingredients</string>
    <string name="mashing_instructions">Mashing instructions:</string>
    <string name="next_step">Next step</string>
    <string name="before_mashing_3">3. Add the grain slowly</string>
    <string name="before_mashing_4">4. Dissolve any lumps, cover the pot and start the timer</string>
    <string name="before_mashing_5">5. Monitor the temperature while it\'s mashing</string>
    <string name="temp_units">ºC</string>
    <string name="timer_default">00:00</string>
    <string name="title_activity_boiling">BoilingActivity</string>
    <string name="step2">Step 2: The boil</string>
    <string name="start_boiling">Start</string>
    <string name="title_activity_fermentation">FermentationActivity</string>
    <string name="step3">Step 3: Fermentation</string>
    <string name="fermentation_text">Fermentation will last a week, you can set a reminder.</string>
    <string name="fermentation_reminder_btn">Set a reminder</string>
    <string name="title_activity_conditioning">ConditioningActivity</string>
    <string name="step4">Step 4: Conditioning</string>
    <string name="conditioning_text">Rack your beer in bottles and wait untill the beer is done.</string>
    <string name="beer_ready">Your beer is ready!</string>
    <string name="can_taste">"You can now taste your "</string>
    <string name="mashing_done">Mashing done!</string>
    <string name="do_boil">Proceed to boiling.</string>
    <string name="boil_done">Boiling done!</string>
    <string name="do_fermentation">Proceed to fermentation.</string>
    <string name="your">"Your "</string>
    <string name="ready_to_rack">" is ready to be racked in bottles."</string>
    <string name="racking_time">Beer racking time!</string>
</resources>
