<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jorgeyp.brewtutor.MashingActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/step1"
        android:id="@+id/step1Text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="100dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_mashing"
        android:id="@+id/startButton"
        android:layout_below="@+id/chronometer"
        android:layout_centerHorizontal="true"
        style="@style/Button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mashing_temp"
        android:id="@+id/mashingTempText"
        android:textSize="50dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mashing_before"
        android:id="@+id/beforeMashingText"
        android:layout_below="@+id/step1Text"
        android:layout_alignParentStart="true"
        android:textColor="@color/imperial_stout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/before_mashing_1"
        android:id="@+id/beforeMashing1"
        android:layout_below="@+id/beforeMashingText"
        android:layout_alignParentStart="true"
        android:textColor="@color/imperial_stout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/before_mashing_2"
        android:id="@+id/beforeMashing2"
        android:textColor="@color/imperial_stout"
        android:layout_below="@+id/beforeMashing1"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mashing_instructions"
        android:id="@+id/mashingInstructions"
        android:layout_below="@+id/beforeMashing2"
        android:layout_alignParentStart="true"
        android:textColor="@color/imperial_stout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/mashing_instructions_1"
        android:id="@+id/mashingInstructions1"
        android:textColor="@color/imperial_stout"
        android:layout_below="@+id/mashingInstructions"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/mashing_instructions_2"
        android:id="@+id/mashingInstructions2"
        android:textColor="@color/imperial_stout"
        android:layout_below="@+id/mashingInstructions1"
        android:layout_alignEnd="@+id/beforeMashing1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        android:id="@+id/nextStepButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="@style/Button"/>

</RelativeLayout>
