<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/beer_card"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="Light lager"
    card_view:cardCornerRadius="4dp"
    card_view:cardUseCompatPadding="true">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/beerImage"
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_rowSpan="7"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/light_lager" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/beer_name"/>

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/amber_ale"
            android:text="@string/beer_time"/>

        <TextView
            android:id="@+id/abvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/amber_ale"
            android:text="@string/beer_abv"/>

        <TextView
            android:id="@+id/ibuText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/amber_ale"
            android:text="@string/beer_ibu"/>

        <TextView
            android:id="@+id/ebcText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/amber_ale"
            android:text="@string/beer_ebc"/>

        ﻿

        <Button
            android:id="@+id/buttonBrew"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="6"
            android:onClick="buttonStartBrewingPressed"
            android:padding="16dp"
            android:text="@string/brew_button_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_column="1"
            android:layout_row="5"
            android:background="@color/divider" />

    </GridLayout>

</android.support.v7.widget.CardView>