<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jorgeyp.brewtutor.FermentationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/step3"
        android:id="@+id/step3Text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fermentation_text"
        android:id="@+id/fermentationText"
        android:layout_below="@+id/step3Text"
        android:layout_alignParentStart="true"
        android:textColor="@color/imperial_stout" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fermentation_reminder_btn"
        android:id="@+id/fermentationReminderBtn"
        style="@style/Button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="buttonSetReminderPressed"/>


</RelativeLayout>
